--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>JS Crash</h1>
+  </header>
 
+<script src="main.js"></script>   
 </body>
 </html>
