--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <h1>JS Crash</h1>
   </header>
 
+  <section class="container">
+    <form id="my-form">
+      <h1>Add User</h1>
+      <div class="msg"></div>
+      <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name">
+      </div>
+      <div>
+        <label for="email">Email:</label>
+        <input type="text" id="email">
+      </div>
+      <input class="btn" type="submit" value="Submit">
+    </form>
+
+    <ul id="users"></ul>
+
 <script src="main.js"></script>   
 </body>
 </html>
