--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     </form>
 
     <ul id="users"></ul>
+     <!-- <ul class="items">
+        <li class="item">Item 1</li>
+        <li class="item">Item 2</li>
+        <li class="item">Item 3</li>
+      </ul> -->
+    </section>
 
 <script src="main.js"></script>   
 </body>
